Frontpage Hero Image

--- a/pages/index.html
+++ b/pages/index.html
@@ -15,9 +15,39 @@ permalink: /
         <a href="/regionale-versorgung" class="menu-item">Regionale Versorgung</a>
     </div>
 </nav>
-
-<header>
-</header>
+	<div class="hero-image">
+	  <div class="hero-text">
+	    <h1>Walter Borchard</h1>
+	    <p>Orthopädie-Schuhtechnik und Sanitätshaus 
+	    <br>Region Rhein-Lahn/Süd-Westerwald</p>
+	    <button>Rufen Sie uns an</button>
+	    <button class="ghost-button">Schreiben Sie uns</button>
+	  </div>
+	</div>
 
 <main>
+	<div class="introduction">
+		<p>Wir sind Ihr Partner wenn es um Fuß-, Knie- oder Rückenfragen geht.<br>
+Unsere Betriebsstruktur der kurzen Wege ermöglicht es uns, schnell und<br>
+kompetent auf Ihre besonderen Wünsche einzugehen.<br></p>
+	
+<p>Wir freuen uns auf Ihren Besuch!</p>
+	</div>
+	<div class="services">
+		<h2>Orthopädie-Schuhtechnik</h2>
+		<ul>
+			<li>Orthopädische Maßschuhe</li>
+			<li>Diabetische Fußversorgung</li>
+			<li>Fuß- und Körperanalyse</li>
+			<li>Einlagentechnik</li>
+			<li>3-Sohlen-Konzeot</li>
+			<li>Arbeitssicherheitsschuhe</li>
+		</ul>
+	</div>
+	<div class="services">
+		<h2>Sanitätshaus</h2>
+
+	</div>
+	<div class="offer"></div>
+	<div class="brands"></div>
 </main>
