--- a/pages/index.html
+++ b/pages/index.html
@@ -26,28 +26,44 @@ permalink: /
 	</div>
 
 <main>
-	<div class="introduction">
-		<p>Wir sind Ihr Partner wenn es um Fuß-, Knie- oder Rückenfragen geht.<br>
-Unsere Betriebsstruktur der kurzen Wege ermöglicht es uns, schnell und<br>
-kompetent auf Ihre besonderen Wünsche einzugehen.<br></p>
-	
-<p>Wir freuen uns auf Ihren Besuch!</p>
-	</div>
-	<div class="services">
-		<h2>Orthopädie-Schuhtechnik</h2>
-		<ul>
-			<li>Orthopädische Maßschuhe</li>
-			<li>Diabetische Fußversorgung</li>
-			<li>Fuß- und Körperanalyse</li>
-			<li>Einlagentechnik</li>
-			<li>3-Sohlen-Konzeot</li>
-			<li>Arbeitssicherheitsschuhe</li>
-		</ul>
-	</div>
-	<div class="services">
-		<h2>Sanitätshaus</h2>
-
-	</div>
-	<div class="offer"></div>
-	<div class="brands"></div>
+    <div class="introduction">
+        <p>Wir sind Ihr Partner wenn es um Fuß-, Knie- oder Rückenfragen geht.
+            <br> Unsere Betriebsstruktur der kurzen Wege ermöglicht es uns, schnell und
+            <br> kompetent auf Ihre besonderen Wünsche einzugehen.
+            <br>
+        </p>
+        <p>Wir freuen uns auf Ihren Besuch!</p>
+    </div>
+    <div class="services">
+        <h2>Orthopädie-Schuhtechnik</h2>
+        <table>
+            <tr>
+                <td>Orthopädische Maßschuhe</td>
+                <td>Diabetische Fußversorgung</td>
+                <td>Fuß- und Körperanalyse</td>
+            </tr>
+            <tr>
+                <td>Einlagentechnik</td>
+                <td>3-Sohlen-Konzeot</td>
+                <td>Arbeitssicherheitsschuhe</td>
+            </tr>
+        </table>
+    </div>
+    <div class="services">
+        <h2>Sanitätshaus</h2>
+		<table>
+            <tr>
+                <td>Orthopädische Maßschuhe</td>
+                <td>Diabetische Fußversorgung</td>
+                <td>Fuß- und Körperanalyse</td>
+            </tr>
+            <tr>
+                <td>Einlagentechnik</td>
+                <td>3-Sohlen-Konzeot</td>
+                <td>Arbeitssicherheitsschuhe</td>
+            </tr>
+        </table>
+    </div>
+    <div class="offer"></div>
+    <div class="brands"></div>
 </main>
