--- a/pages/index.html
+++ b/pages/index.html
@@ -44,7 +44,7 @@ permalink: /
             </tr>
             <tr>
                 <td>Einlagentechnik</td>
-                <td>3-Sohlen-Konzeot</td>
+                <td>3-Sohlen-Konzept</td>
                 <td>Arbeitssicherheitsschuhe</td>
             </tr>
         </table>
@@ -53,17 +53,27 @@ permalink: /
         <h2>Sanitätshaus</h2>
 		<table>
             <tr>
-                <td>Orthopädische Maßschuhe</td>
-                <td>Diabetische Fußversorgung</td>
-                <td>Fuß- und Körperanalyse</td>
+                <td>Kompressionsstrümpfe</td>
+                <td>Bandage</td>
+                <td>Orthopädische Gehhilfen</td>
             </tr>
             <tr>
-                <td>Einlagentechnik</td>
-                <td>3-Sohlen-Konzeot</td>
-                <td>Arbeitssicherheitsschuhe</td>
+                <td>Orthesen</td>
+                <td>Alltagshilfen</td>
+                <td>Sani-Fit-Shop</td>
             </tr>
         </table>
     </div>
-    <div class="offer"></div>
-    <div class="brands"></div>
+    <div class="offer">
+    	<h2>Aktuelles</h2>
+    	<img src="assets/offer.jpg" alt="Angebot">
+    </div>
+    <div class="brands">
+    	<div class="brands-icons">
+    	<img src="assets/brands/Bauerfeind.png" alt="Bauerfeind">
+    	<img src="assets/brands/Waldlaeufer.png" alt="Waldläufer">
+    	<img src="assets/brands/Egroh.png" alt="EGROH">
+    	<img id="varomed" src="assets/brands/Varomed.png" alt="Varomed">
+    	</div>
+    </div>
 </main>
