--- a/pages/index.html
+++ b/pages/index.html
@@ -5,16 +5,17 @@ description:
 permalink: /
 ---
 
-<nav>
-    <a href="/" class="logo-group"><img class="logo" src="/assets/logo-simple.png" alt="Logo"><div class="name">Walter Borchard</div></a>
-    <div class="menu-item-group">
-        <a href="/" class="menu-item active">Start</a>
-        <a href="/orthopaedie-schuhtechnik" class="menu-item">Orthopädie-Schuhtechnik</a>
-        <a href="/sanitaetshaus" class="menu-item">Sanitätshaus</a>
-        <a href="/firma" class="menu-item">Firma</a>
-        <a href="/regionale-versorgung" class="menu-item">Regionale Versorgung</a>
-    </div>
-</nav>
+<header>
+	<nav>
+	    <a href="/" class="logo-group"><img class="logo" src="/assets/logo-simple.png" alt="Logo"><div class="name">Walter Borchard</div></a>
+	    <div class="menu-item-group">
+	        <a href="/" class="menu-item active">Start</a>
+	        <a href="/orthopaedie-schuhtechnik" class="menu-item">Orthopädie-Schuhtechnik</a>
+	        <a href="/sanitaetshaus" class="menu-item">Sanitätshaus</a>
+	        <a href="/firma" class="menu-item">Firma</a>
+	        <a href="/regionale-versorgung" class="menu-item">Regionale Versorgung</a>
+	    </div>
+	</nav>
 	<div class="hero-image">
 	  <div class="hero-text">
 	    <h1>Walter Borchard</h1>
@@ -24,6 +25,7 @@ permalink: /
 	    <button class="ghost-button">Schreiben Sie uns</button>
 	  </div>
 	</div>
+</header>
 
 <main>
     <div class="introduction">
