--- a/pages/index.html
+++ b/pages/index.html
@@ -16,7 +16,7 @@ permalink: /
 	        <a href="/regionale-versorgung" class="menu-item">Regionale Versorgung</a>
 	    </div>
 	</nav>
-	<div class="hero-image">
+	<div class="hero-image hero-image-left hero-image-start ">
 	  <div class="hero-text">
 	    <h1>Walter Borchard</h1>
 	    <p>Orthopädie-Schuhtechnik und Sanitätshaus 
@@ -36,7 +36,7 @@ permalink: /
         </p>
         <p>Wir freuen uns auf Ihren Besuch!</p>
     </div>
-    <div class="services">
+    <div class="service-overview">
         <h2>Orthopädie-Schuhtechnik</h2>
         <table>
             <tr>
@@ -51,7 +51,7 @@ permalink: /
             </tr>
         </table>
     </div>
-    <div class="services">
+    <div class="service-overview">
         <h2>Sanitätshaus</h2>
 		<table>
             <tr>
