--- a/pages/orthopaedie-schuhtechnik.html
+++ b/pages/orthopaedie-schuhtechnik.html
@@ -15,9 +15,43 @@ permalink: /orthopaedie-schuhtechnik
         <a href="/regionale-versorgung" class="menu-item">Regionale Versorgung</a>
     </div>
 </nav>
-
-
+<div class="hero-image hero-image-ortho">
+	  <div class="hero-text">
+	    <h1>Orthopädie-Schuhtechnik</h1>
+	  </div>
+	</div>
 </header>
 
 <main>
+	<div class="introduction">
+        <p>Wir sind Ihr Partner wenn es um Fuß-, Knie- oder Rückenfragen geht.
+            <br> Unsere Betriebsstruktur der kurzen Wege ermöglicht es uns, schnell und
+            <br> kompetent auf Ihre besonderen Wünsche einzugehen.
+            <br>
+        </p>
+        <p>Wir freuen uns auf Ihren Besuch!</p>
+    </div>
+    <div class="services">
+    	<h2>Leistungen</h2>
+    	<p>Service verstehen wir als Dienst am Kunden und bieten neben persönlicher fachlicher Bedienung und Beratung Hausbesuche auf Absprache und akute Versorgung an. Mit unserer Kundenkarte erhalten Sie drei Prozent Rabatt auf alle Schuhe. Außerdem akzeptieren wir die Lahnstein-Card. Wir bieten Einlagen- und Schuhkontrolle und unsere Meisterwerkstatt befindet sich direkt im Haus.
+        </p>
+
+        <div class="service-cards">
+    <div class="card">
+	    <div class="container">
+	        <h4>Orthopädische Maßschuhe</h4>
+			<ul>
+				<li>Straßenschuhe</li>
+				<li>Stiefel</li>
+			</ul>
+	    </div>
+	</div>
+	<div class="card">
+	    <div class="container">
+	        <h4><b>John Doe</b></h4>
+	        <p>Architect & Engineer</p>
+	    </div>
+	</div>
+        </div>
+    </div>
 </main>
