--- a/pages/orthopaedie-schuhtechnik.html
+++ b/pages/orthopaedie-schuhtechnik.html
@@ -4,22 +4,26 @@ title: Walter Borchard | Orthopädie-Schuhtechnik
 description: 
 permalink: /orthopaedie-schuhtechnik
 ---
-<header>
-<nav>
-    <a href="/" class="logo-group"><img class="logo" src="/assets/logo-simple.png" alt="Logo"><div class="name">Walter Borchard</div></a>
-    <div class="menu-item-group">
-        <a href="/" class="menu-item">Start</a>
-        <a href="/orthopaedie-schuhtechnik" class="menu-item active">Orthopädie-Schuhtechnik</a>
-        <a href="/sanitaetshaus" class="menu-item">Sanitätshaus</a>
-        <a href="/firma" class="menu-item">Firma</a>
-        <a href="/regionale-versorgung" class="menu-item">Regionale Versorgung</a>
+
+<header class="header header--hero">
+    <nav class="header__nav-bar">
+        <a href="/" class="nav__logo">
+            <img class="nav__logo-img" src="/assets/logo-simple.png" alt="Logo">
+            <span class="nav__logo-name">Walter Borchard</span>
+        </a>
+        <div class="nav__menu">
+            <a href="/" class="nav__menu-item">Start</a>
+            <a href="/orthopaedie-schuhtechnik" class="nav__menu-item nav__menu-item--active">Orthopädie-Schuhtechnik</a>
+            <a href="/sanitaetshaus" class="nav__menu-item">Sanitätshaus</a>
+            <a href="/firma" class="nav__menu-item">Firma</a>
+            <a href="/regionale-versorgung" class="nav__menu-item">Regionale Versorgung</a>
+        </div>
+    </nav>
+    <div class="header__image header__image--center header__image--ortho">
+      <div class="header__text">
+        <h1>Orthopädie-Schuhtechnik</h1>
+      </div>
     </div>
-</nav>
-<div class="hero-image hero-image-ortho">
-	  <div class="hero-text">
-	    <h1>Orthopädie-Schuhtechnik</h1>
-	  </div>
-	</div>
 </header>
 
 <main>
