Infor Cards and Refactoring

--- a/pages/index.html
+++ b/pages/index.html
@@ -24,14 +24,14 @@ permalink: /
 	    <h1>Walter Borchard</h1>
 	    <p>Orthopädie-Schuhtechnik und Sanitätshaus 
 	    <br>Region Rhein-Lahn/Süd-Westerwald</p>
-	    <button>Rufen Sie uns an</button>
-	    <button class="ghost-button">Schreiben Sie uns</button>
+	    <button class="btn btn--standard">Rufen Sie uns an</button>
+	    <button class="btn btn--ghost">Schreiben Sie uns</button>
 	  </div>
 	</div>
 </header>
 
 <main>
-    <div class="text--large">
+    <div class="text--center">
         <p>Wir sind Ihr Partner wenn es um Fuß-, Knie- oder Rückenfragen geht.
             <br> Unsere Betriebsstruktur der kurzen Wege ermöglicht es uns, schnell und
             <br> kompetent auf Ihre besonderen Wünsche einzugehen.
