--- a/pages/orthopaedie-schuhtechnik.html
+++ b/pages/orthopaedie-schuhtechnik.html
@@ -4,7 +4,6 @@ title: Walter Borchard | Orthopädie-Schuhtechnik
 description: 
 permalink: /orthopaedie-schuhtechnik
 ---
-
 <header class="header header--hero">
     <nav class="header__nav-bar">
         <a href="/" class="nav__logo">
@@ -20,14 +19,13 @@ permalink: /orthopaedie-schuhtechnik
         </div>
     </nav>
     <div class="header__image header__image--center header__image--ortho">
-      <div class="header__text">
-        <h1>Orthopädie-Schuhtechnik</h1>
-      </div>
+        <div class="header__text">
+            <h1>Orthopädie-Schuhtechnik</h1>
+        </div>
     </div>
 </header>
-
 <main>
-	<div class="text--center">
+    <div class="text--center">
         <p>Wir sind Ihr Partner wenn es um Fuß-, Knie- oder Rückenfragen geht.
             <br> Unsere Betriebsstruktur der kurzen Wege ermöglicht es uns, schnell und
             <br> kompetent auf Ihre besonderen Wünsche einzugehen.
@@ -35,124 +33,191 @@ permalink: /orthopaedie-schuhtechnik
         </p>
         <p>Wir freuen uns auf Ihren Besuch!</p>
     </div>
-    <div class="text section">
-    	<h2>Leistungen</h2>
-    	<p>Service verstehen wir als Dienst am Kunden und bieten neben persönlicher fachlicher Bedienung und Beratung Hausbesuche auf Absprache und akute Versorgung an. Mit unserer Kundenkarte erhalten Sie drei Prozent Rabatt auf alle Schuhe. Außerdem akzeptieren wir die Lahnstein-Card. Wir bieten Einlagen- und Schuhkontrolle und unsere Meisterwerkstatt befindet sich direkt im Haus.
+    <div class="section">
+    <div class="text">
+        <h2>Leistungen</h2>
+        <p>Service verstehen wir als Dienst am Kunden und bieten neben persönlicher fachlicher Bedienung und Beratung Hausbesuche auf Absprache und akute Versorgung an. Mit unserer Kundenkarte erhalten Sie drei Prozent Rabatt auf alle Schuhe. Außerdem akzeptieren wir die Lahnstein-Card. Wir bieten Einlagen- und Schuhkontrolle und unsere Meisterwerkstatt befindet sich direkt im Haus.
         </p>
+    </div>
+    <div class="service-cards section__element">
+        <div class="card card-link">
+            <div class="card__text">
+                <h4>Orthopädische <br>Maßschuhe</h4>
+                <ul class="card__list">
+                    <li>Straßenschuhe</li>
+                    <li>Halbschuh/Stiefel</li>
+                    <li>Sportschuhe</li>
+                    <li>Hausschuhe/-Sandalen</li>
+                    <li>Diabetikerschuhe</li>
+                    <li>Arbeitsschuhe nach DIN</li>
+                </ul>
+            </div>
+            <button class="btn btn--read-more">Mehr erfahren</button>
+        </div>
+        <div class="card card-link">
+            <div class="card__text">
+                <h4>Einlagentechnik</h4>
+                <ul class="card__list">
+                    <li>Basis- bis Comfort-Einlagen</li>
+                    <li>Lady- und Neptun-Einlagen</li>
+                    <li>Arbeitssicherheitsschuh-Einlage nach BGR 191</li>
+                    <li>Premium-/Sporteinlagen</li>
+                    <li>Senso-Neuromotorische-Einlagen</li>
+                </ul>
+            </div>
+            <button class="btn btn--read-more">Mehr erfahren</button>
+        </div>
+        <div class="card card-link">
+            <div class="card__text">
+                <h4>Fuß- und <br>Körperanalyse</h4>
+                <p>Erfassung und Korrektur von körperlichen Fehlstellungen im Body-Check-Center.</p>
+                <ul class="card__list">
+                    <li>videogestützte Laufanalyse</li>
+                    <li>Fußdruckmessung</li>
+                    <li>Balancemessung</li>
+                </ul>
+            </div>
+            <button class="btn btn--read-more">Mehr erfahren</button>
+        </div>
+        <div class="card card-link">
+            <div class="card__text">
+                <h4>Diabetische <br>Fußversorgung</h4>
+                <ul class="card__list">
+                    <li>Diabetische orthopädische Maßschuhe</li>
+                    <li>Diabetiker Therapieschuhe</li>
+                    <li>Diabetische adaptierte Einlagen</li>
+                    <li>Schuhkorrektur an Konfektionsschuhen</li>
+                </ul>
+            </div>
+            <button class="btn btn--read-more">Mehr erfahren</button>
+        </div>
+        <div class="card card-link">
+            <div class="card__text">
+                <h4>3-Sohlen-Konzept</h4>
+                <p>Mit dem 3-Sohlen-Konzept wollen wir den verschiedenen Ansprüchen an Schuhe mit unterschiedlichen Schuhkonzepten gerecht werden.</p>
+            </div>
+            <button class="btn btn--read-more">Mehr erfahren</button>
+        </div>
+        <div class="card card-link">
+            <div class="card__text">
+                <h4>Arbeits-<br>Sicherheitsschuhe</h4>
+                <p>Um Versicherungsschutz zu gewährleisten, müssen Einlagen für Arbeitssicherheitsschuhe nach der BGR 191 erstellt werden und der Baumusterprüfung des Schuhes entsprechen.</p>
+            </div>
+            <button class="btn btn--read-more">Mehr erfahren</button>
+        </div>
+        <div class="card card-link">
+            <div class="card__text">
+                <h4>Schuhzurichtung</h4>
+                <p>Auf besonderen Wunsch schneiden wir beim alten Schuh die Schuhsohle auf und setzten die Korrektur dazwischen, falls der Schuh dafür geeignet ist.</p>
+            </div>
+            <button class="btn btn--read-more">Mehr erfahren</button>
+        </div>
+        <div class="card">
+            <div class="card__text">
+                <h4>Reparaturarbeiten</h4>
+                <p>Mit unserer eigenen Werkstatt bieten wir ein fachgerechte Instandhaltung Ihrer orthopädischen Schuhe unter Berücksichtigung der orthopädischen Gegebenheiten.</p>
+            </div>
+        </div>
+    </div>
+    </div>
+    <div class="section">
+    <div class="text">
+        <h2>Schmerzen</h2>
+        <p>Für Sie als Kunde ist es wichtig zu erfahren, was gegen Ihre Schmerzen konkret hilft. Darum gehen wir auf verschiedene Schmerzbereiche ein und stellen eine Auswahl an therapeutischen Möglichkeiten zur Behandlung vor.</p>
+        <p>Grundsätzlich gilt bei jeder Maßnahme, dass eine klare Diagnose hilft, die richtige Behandlung zu finden. Darum ist es wichtig, erst zum Arzt/Facharzt zu gehen um eine gezielte Diagnose zu erstellen.</p>
+    </div>
+    <div class="section__element">
+        <table class="pain last-element">
+            <tr>
+                <td>
+                    <h4>Vorfußbereich</h4>
+                    <ul class="table__list">
+                    <li>Einlage mit Schmetterlingspolster</li>
+                    <li>Ballenrolle</li>
+                    <li>Schmetterlingsrolle</li>
+                    <li>Fußsohlenmessung</li>
+                    <li>Fußgymnastik</li>
+                    </ul>
+                </td>
+                <td>
+                    <h4>Hallux Rigidus/Limitus</h4>
+                    <ul class="table__list">
+                    <li>Rigidus-Abrollhilfe (Sohlenversteifung optional)</li>
+                    <li>Rigidus-Einlage</li>
+                    <li>Fußsohlenmessung</li>
+                    </ul>
+                </td>
+                <td>
+                    <h4>Fersensporn/-schmerz</h4>
+                    <ul class="table__list">
+                    <li>Fersensporneinlage</li>
+                    <li>Schmerzeinlage mit Service</li>
+                    <li>Gymnastikübungen</li>
+                    </ul>
+                </td>
+            </tr>
 
-        <div class="service-cards section">
-            <div class="card">
-                <div class="card__text">
-                    <h4>Orthopädische Maßschuhe</h4>
-                    <ul class="card__list">
-                        <li>Straßenschuhe</li>
-                        <li>Halbschuh/Stiefel</li>
-                        <li>Sportschuhe</li>
-                        <li>Hausschuhe/-Sandalen</li>
-                        <li>Diabetikerschuhe</li>
-                        <li>Arbeitsschuhe n. DIN</li>
+            <tr>
+                <td>
+                    <h4>Diabetisches Fußsyndrom</h4>
+                    <ul class="table__list">
+                    <li>Weichschaumeinlage</li>
+                    <li>Diabetes-adaptierte Fußbettung</li>
+                    <li>Diabetes-Therapieschuh</li>
+                    <li>Diabetes-Maßschuh</li>
+                    <li>Vorfuß-Entlastungsschuh</li>
                     </ul>
-                </div>
-                <button class="btn btn--read-more">Mehr erfahren</button>
-            </div>
-            <div class="card">
-                <div class="card__text">
-                    <h4>Orthopädische Maßschuhe</h4>
-                    <ul class="card__list">
-                        <li>Straßenschuhe</li>
-                        <li>Halbschuh/Stiefel</li>
-                        <li>Sportschuhe</li>
-                        <li>Hausschuhe/-Sandalen</li>
-                        <li>Diabetikerschuhe</li>
-                        <li>Arbeitsschuhe n. DIN</li>
+                </td>
+                <td>
+                    <h4>Achillessehne</h4>
+                    <ul class="table__list">
+                    <li>Bandage (z.B. AchilloTrain)</li>
+                    <li>Übungen bei Achillessehnenreizung</li>
+                    <li>Sensomotorische Einlagen</li>
                     </ul>
-                </div>
-                <button class="btn btn--read-more">Mehr erfahren</button>
-            </div>
-            <div class="card">
-                <div class="card__text">
-                    <h4>Orthopädische Maßschuhe</h4>
-                    <ul class="card__list">
-                        <li>Straßenschuhe</li>
-                        <li>Halbschuh/Stiefel</li>
-                        <li>Sportschuhe</li>
-                        <li>Hausschuhe/-Sandalen</li>
-                        <li>Diabetikerschuhe</li>
-                        <li>Arbeitsschuhe n. DIN</li>
+                </td>
+                <td>
+                    <h4>Sprunggelenk</h4>
+                    <ul class="table__list">
+                    <li>Mittelfußrolle</li>
+                    <li>Schaukelrolle</li>
+                    <li>Orthesenschuhe</li>
                     </ul>
-                </div>
-                <button class="btn btn--read-more">Mehr erfahren</button>
-            </div>
-            <div class="card">
-                <div class="card__text">
-                    <h4>Orthopädische Maßschuhe</h4>
-                    <ul class="card__list">
-                        <li>Straßenschuhe</li>
-                        <li>Halbschuh/Stiefel</li>
-                        <li>Sportschuhe</li>
-                        <li>Hausschuhe/-Sandalen</li>
-                        <li>Diabetikerschuhe</li>
-                        <li>Arbeitsschuhe n. DIN</li>
-                    </ul>
-                </div>
-                <button class="btn btn--read-more">Mehr erfahren</button>
-            </div>
-            <div class="card">
-                <div class="card__text">
-                    <h4>Orthopädische Maßschuhe</h4>
-                    <ul class="card__list">
-                        <li>Straßenschuhe</li>
-                        <li>Halbschuh/Stiefel</li>
-                        <li>Sportschuhe</li>
-                        <li>Hausschuhe/-Sandalen</li>
-                        <li>Diabetikerschuhe</li>
-                        <li>Arbeitsschuhe n. DIN</li>
-                    </ul>
-                </div>
-                <button class="btn btn--read-more">Mehr erfahren</button>
-            </div>
-            <div class="card">
-                <div class="card__text">
-                    <h4>Orthopädische Maßschuhe</h4>
-                    <ul class="card__list">
-                        <li>Straßenschuhe</li>
-                        <li>Halbschuh/Stiefel</li>
-                        <li>Sportschuhe</li>
-                        <li>Hausschuhe/-Sandalen</li>
-                        <li>Diabetikerschuhe</li>
-                        <li>Arbeitsschuhe n. DIN</li>
-                    </ul>
-                </div>
-                <button class="btn btn--read-more">Mehr erfahren</button>
-            </div>
-            <div class="card">
-                <div class="card__text">
-                    <h4>Orthopädische Maßschuhe</h4>
-                    <ul class="card__list">
-                        <li>Straßenschuhe</li>
-                        <li>Halbschuh/Stiefel</li>
-                        <li>Sportschuhe</li>
-                        <li>Hausschuhe/-Sandalen</li>
-                        <li>Diabetikerschuhe</li>
-                        <li>Arbeitsschuhe n. DIN</li>
-                    </ul>
-                </div>
-                <button class="btn btn--read-more">Mehr erfahren</button>
-            </div>
-            <div class="card">
-                <div class="card__text">
-                    <h4>Orthopädische Maßschuhe</h4>
-                    <ul class="card__list">
-                        <li>Straßenschuhe</li>
-                        <li>Halbschuh/Stiefel</li>
-                        <li>Sportschuhe</li>
-                        <li>Hausschuhe/-Sandalen</li>
-                        <li>Diabetikerschuhe</li>
-                        <li>Arbeitsschuhe n. DIN</li>
-                    </ul>
-                </div>
+                </td>
+            </tr>
 
-            </div>
+            <tr>
+                <td>
+                    <h4>Statische Fehlstellung</h4>
+                    <ul class="table__list">
+                    <li>Außenranderhöhung (Schuh/Einlage)</li>
+                    <li>Längenausgleich</li>
+                    <li>Körpermessung</li>
+                    <li>Sensomotorische Sohle (AFG)</li>
+                    <li>Sensomotorische Einlagen</li>
+                    </ul>
+                </td>
+                <td>
+                    <h4>Knieschmerzen</h4>
+                    <ul class="table__list">
+                    <li>Orthese</li>
+                    <li>Körpermessung</li>
+                    <li>Sensomotorische Sohle (AFG)</li>
+                    <li>Sensomotorische Einlagen</li>
+                    </ul>
+                </td>
+                <td>
+                    <h4>Rücken</h4>
+                    <ul class="table__list">
+                    <li>Körpermessung</li>
+                    <li>Funktionsrolle</li>
+                    <li>gezieltes Rückentraining</li>
+                    <li>Sensomotorische Sohle (AFG)</li>
+                    <li>sensomotorische Einlagen</li>
+                    </ul>
+                </td>
+            </tr>
+        </table>
     </div>
     </div>
 </main>
