--- a/pages/sanitaetshaus.html
+++ b/pages/sanitaetshaus.html
@@ -18,7 +18,7 @@ permalink: /sanitaetshaus
             <a href="/regionale-versorgung" class="nav__menu-item">Regionale Versorgung</a>
         </div>
     </nav>
-    <div class="header__image header__image--center header__image--ortho">
+    <div class="header__image header__image--center header__image--sani">
       <div class="header__text">
         <h1>Sanitätshaus</h1>
       </div>
@@ -26,4 +26,179 @@ permalink: /sanitaetshaus
 </header>
 
 <main>
+    <div class="text">
+        <p>Sanitätshäuser sind Teil des Gesundheitswesens und übernehmen die Versorgung von Patienten in den Bereichen Sanitätsartikel und Orthopädietechnik. Ein Bindeglied zwischen Orthopädie, Sanitätshaus und Prophylaxe ist unser Sani-Fit-Shop. Das Sortiment unseres Sanitätshauses ist umfangreich und wird ständig erweitert. Alle Produkte von Basis bis Premium sind von hoher Qualität.</p>
+    </div>
+    <div class="section">
+    <div class="text">
+        <h2>Leistungen</h2>
+        <p>Service verstehen wir als Dienst am Kunden und bieten neben persönlicher fachlicher Bedienung und Beratung Hausbesuche auf Absprache und akute Versorgung an. Mit unserer Kundenkarte erhalten Sie drei Prozent Rabatt auf alle Schuhe. Außerdem akzeptieren wir die Lahnstein-Card.
+        </p>
+    </div>
+    <div class="service-cards section__element">
+        <div class="card card-link">
+            <div class="card__text">
+                <h4>Kompressionsstrümpfe</h4>
+                <ul class="card__list">
+                    <li>Basis- und Premiumprodukte</li>
+                    <li>nach Maß und Serie</li>
+                    <li>Lymphatische Versorgung  von Fuß bis Arm</li>
+                    <li>Reparaturservice</li>
+                </ul>
+            </div>
+            <button class="btn btn--read-more">Mehr erfahren</button>
+        </div>
+        <div class="card card-link">
+            <div class="card__text">
+                <h4>Bandagen</h4>
+                <ul class="card__list">
+                    <li>Basis- und Premiumprodukte</li>
+                    <li>nach Maß und Serie</li>
+                    <li>von Kopf bis Fuß</li>
+                    <li>von Standard bis Hightech</li>
+                </ul>
+            </div>
+            <button class="btn btn--read-more">Mehr erfahren</button>
+        </div>
+        <div class="card card-link">
+            <div class="card__text">
+                <h4>Orthesen</h4>
+                <p>Erfassung und Korrektur von körperlichen Fehlstellungen im Body-Check-Center.</p>
+                <ul class="card__list">
+                    <li>Basis- und Premiumprodukte</li>
+                    <li>nach Maß und Serie</li>
+                    <li>von Kopf bis Fuß</li>
+                    <li>von Standard bis Hightech</li>
+                </ul>
+            </div>
+            <button class="btn btn--read-more">Mehr erfahren</button>
+        </div>
+        
+        <div class="card">
+            <div class="card__text">
+                <h4>Alltagshilfen</h4>
+                <ul class="card__list">
+                    <li>Greifhilfen</li>
+                    <li>Anziehhilfen</li>
+                    <li>Soft- und Igelbälle</li>
+                    <li>Blutdruckmessgeräte</li>
+                    <li>Keil- und Rückenkissen</li>
+                    <li>Balancekegel</li>
+                    <li>Sitz- und Therapiebälle</li>
+                    <li>Fußdruckschutzartikel</li>
+                    <li>Wärmetherapie</li>
+                </ul>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card__text">
+                <h4>Orthopädische <br>Gehhilfen</h4>
+                <ul class="card__list">
+                    <li>von Standard bis elegant</li>
+                    <li>Gehstöcke aus Metall, verstellbar</li>
+                    <li>Gehstöcke mit anatomischem Handgriff</li>
+                    <li>Unterarmgehstützen u.v.m.</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    </div>
+    <div class="section">
+    <div class="text">
+        <h2>Schmerzen</h2>
+        <p>Für Sie als Kunde ist es wichtig zu erfahren, was gegen Ihre Schmerzen konkret hilft. Darum gehen wir auf verschiedene Schmerzbereiche ein und stellen eine Auswahl an therapeutischen Möglichkeiten zur Behandlung vor.</p>
+        <p>Grundsätzlich gilt bei jeder Maßnahme, dass eine klare Diagnose hilft, die richtige Behandlung zu finden. Darum ist es wichtig, erst zum Arzt/Facharzt zu gehen um eine gezielte Diagnose zu erstellen.</p>
+    </div>
+    <div class="section__element">
+        <table class="pain last-element">
+            <tr>
+                <td>
+                    <h4>Vorfußbereich</h4>
+                    <ul class="table__list">
+                    <li>Spreizfußbandage</li>
+                    <li>Silikonpolster</li>
+                    <li>Hallux Valgus Nachtschiene</li>
+                    <li>Hallufix Tag & Nachtschiene</li>
+                    </ul>
+                </td>
+                <td>
+                    <h4>Fersensporn/-schmerz</h4>
+                    <ul class="table__list">
+                    <li>Silikon-Fernsensporneinlage</li>
+                    </ul>
+                </td>
+                <td>
+                    <h4>Sprunggelenk</h4>
+                    <ul class="table__list">
+                    <li>Bandage (z.B. MalleoTrain)</li>
+                    <li>Orthese AirCast/Airgo</li>
+                    </ul>
+                </td>
+            </tr>
+
+            <tr>
+                <td>
+                    <h4>Statische Fehlstellung</h4>
+                    <ul class="table__list">
+                    <li>Körpermessung</li>
+                    <li>Sensomotorische Sohle (AFG)</li>
+                    <li>Diabetes-Therapieschuh</li>
+                    <li>Diabetes-Maßschuh</li>
+                    <li>Vorfuß-Entlastungsschuh</li>
+                    </ul>
+                </td>
+                <td>
+                    <h4>Knieschmerzen</h4>
+                    <ul class="table__list">
+                    <li>Bandage (z.B. GenuTrain)</li>
+                    <li>Orthese (z.B: Donjoy)</li>
+                    <li>Körpermessung</li>
+                    <li>Sensomotorische Sohle (AFG)</li>
+                    </ul>
+                </td>
+                <td>
+                    <h4>Rücken</h4>
+                    <ul class="table__list">
+                    <li>Aktivbandage (z.B. LumboTrain)</li>
+                    <li>Orthesen (z.B. LumboLoc Forte)</li>
+                    <li>Körpermessung</li>
+                    <li>Keilkissen</li>
+                    <li>Sitzball</li>
+                    <li>Sensomotorische Sohle (AFG)</li>
+                    </ul>
+                </td>
+            </tr>
+
+            <tr>
+                <td>
+                    <h4>Hand</h4>
+                    <ul class="table__list">
+                    <li>Handbandage (z.B. ManuTrain)</li>
+                    <li>Orthesen (z.B. ManuLoc)</li>
+                    <li>Fingergelenkstütze (z.B. Bort)</li>
+                    <li>Stressball</li>
+                    <li>Softball</li>
+                    <li>Therapieknete</li>
+                    </ul>
+                </td>
+                <td>
+                    <h4>Daumen/Finger</h4>
+                    <ul class="table__list">
+                    <li>Daumenorthese (z.B. RhizoLoc)</li>
+                    <li>Fingerorthese (z.B. MobiDig)</li>
+                    <li>BORT Daumen-Handorthese</li>
+                    <li>Sensomotorische Einlagen</li>
+                    </ul>
+                </td>
+                <td>
+                    <h4>Ellenbogen</h4>
+                    <ul class="table__list">
+                    <li>Bandage (z.B. EpiTrain)</li>
+                    <li>Spange (z.B. EpiPoint)</li>
+                    </ul>
+                </td>
+            </tr>
+        </table>
+    </div>
+    </div>
 </main>
