--- a/pages/firma.html
+++ b/pages/firma.html
@@ -18,7 +18,7 @@ permalink: /firma
             <a href="/regionale-versorgung" class="nav__menu-item">Regionale Versorgung</a>
         </div>
     </nav>
-    <div class="header__image header__image--center header__image--ortho">
+    <div class="header__image header__image--center header__image--firma">
       <div class="header__text">
         <h1>Firma</h1>
       </div>
@@ -26,4 +26,26 @@ permalink: /firma
 </header>
 
 <main>
+    <div class="text">
+        <p>Wir sind ein Inhaber-geführtes, zertifiziertes Fachgeschäft in den Bereichen Orthopädie – Schuhtechnik und Sanitätshaus mit der Konzentration auf einen Standort. Unsere modernen Räumlichkeiten liegen zentral in Oberlahnstein am Salhofplatz, mit großem Parkplatzangebot.</p>
+        <p>Behinderten Parkplätze befinden sich im Innenhof und es gibt gute Bus- und Bahnverbindungen. Das Sortiment unseres Sanitätshauses ist ausgewogen und umfasst alle gängigen Produkte und Preisklassen. Die individuelle Versorgung, das Eingehen auf Ihre Person ist die Grundlage unserer Arbeit. Wir führen ein umfangreiches Angebot an Bequem-Schuhen und Sandalen. Unsere freundlichen und kompetenten Mitarbeiterinnen freuen sich auf Sie und beraten Sie gerne.</p>
+    </div>
+
+    <div class="section">
+        <h2>Geschichte</h2>
+        <div class="section__element">
+            <img src="/assets/timeline.svg" alt="Zeitleiste">
+        </div>
+
+        <div class="section__element last-element">
+            <div class="text">
+                <p>Geschichten haben einen Anfang. Die Geschichte von WALTER BORCHARD Orthopädie-Schuhtechnik begann 1754 mit der Familientradition und dem über jahrhunderte gepflegten Schuhmacherhandwerk.
+                Die Liebe zu Leder, Schuhleisten und Schuhen wurde mir quasi in die Wiege gelegt und war in den ersten Jahren meines Lebens meine Spielwiese.</p>
+                <p>Mein beruflicher Einstieg begann 1976 mit der Berufsausbildung zum Orthopädieschuhmacher beim Landes-Obermeister Fritz Henkel in Göttingen. Nach erfolgreichem Abschluss der Gesellenprüfung begannen meine persönlichen Wanderjahre, die mich von Göttingen aus nach Mönchengladbach, Homberg/Ohm, Besuch der BfO-Meisterschule Hannover, erste Meisterstelle bei der Firma Kreuzer in Hagen, anschließend Fa. Müller & Sohn in Bad Endbach führten. Mit Übernahme der Firma Laux, Orthopädieschuhtechnik, begann 1994 mein Wirken in Bad Ems. Im Dezember 1997 erfolgte mein Umzug in die Römerstraße 54. Mit dem systematischen und kontinuierlichen Aufbau und der Weiterentwicklungen unseres Angebotes haben wir 1999 die Kassenzulassung zum Sanitätshaus erhalten. Durch unser erweitertes Sortiment können wir unsere Kunden von Kopf bis Fuß, z. B. mit Bandagen, versorgen.</p>
+                <p>Durch gesetzliche und kassenrechtliche Veränderungen stand 2012 der Umzug nach Lahnstein an, um den technischen und funktionellen Ansprüchen gerecht zu werden. In unseren modernen, großzügigen Räumlichkeiten bieten wir einen behindertengerechten Zugang und Versorgung an.
+                Durch die Kombination von eigener orthopädischer Werkstatt, Orthopädie-Schuhtechnik, Bequem- und Funktions-Schuhverkauf, Sanitätshausbereich und dem Body-Check-Center, sind wir gut gerüstet uns den zukünftigen Anfordernissen und Kundenansprüchen zu stellen.</p>
+
+            </div>
+        </div>
+    </div>
 </main>
