--- a/pages/orthopaedie-schuhtechnik.html
+++ b/pages/orthopaedie-schuhtechnik.html
@@ -43,7 +43,7 @@ permalink: /orthopaedie-schuhtechnik
         <div class="card card-link">
             <div class="card__text">
                 <h4>Orthopädische <br>Maßschuhe</h4>
-                <ul class="card__list">
+                <ul class="card__list text__list">
                     <li>Straßenschuhe</li>
                     <li>Halbschuh/Stiefel</li>
                     <li>Sportschuhe</li>
@@ -57,7 +57,7 @@ permalink: /orthopaedie-schuhtechnik
         <div class="card card-link">
             <div class="card__text">
                 <h4>Einlagentechnik</h4>
-                <ul class="card__list">
+                <ul class="card__list text__list">
                     <li>Basis- bis Comfort-Einlagen</li>
                     <li>Lady- und Neptun-Einlagen</li>
                     <li>Arbeitssicherheitsschuh-Einlage nach BGR 191</li>
@@ -71,7 +71,7 @@ permalink: /orthopaedie-schuhtechnik
             <div class="card__text">
                 <h4>Fuß- und <br>Körperanalyse</h4>
                 <p>Erfassung und Korrektur von körperlichen Fehlstellungen im Body-Check-Center.</p>
-                <ul class="card__list">
+                <ul class="card__list text__list">
                     <li>videogestützte Laufanalyse</li>
                     <li>Fußdruckmessung</li>
                     <li>Balancemessung</li>
@@ -82,7 +82,7 @@ permalink: /orthopaedie-schuhtechnik
         <div class="card card-link">
             <div class="card__text">
                 <h4>Diabetische <br>Fußversorgung</h4>
-                <ul class="card__list">
+                <ul class="card__list text__list">
                     <li>Diabetische orthopädische Maßschuhe</li>
                     <li>Diabetiker Therapieschuhe</li>
                     <li>Diabetische adaptierte Einlagen</li>
