--- a/pages/sanitaetshaus.html
+++ b/pages/sanitaetshaus.html
@@ -39,7 +39,7 @@ permalink: /sanitaetshaus
         <div class="card card-link">
             <div class="card__text">
                 <h4>Kompressionsstrümpfe</h4>
-                <ul class="card__list">
+                <ul class="card__list text__list">
                     <li>Basis- und Premiumprodukte</li>
                     <li>nach Maß und Serie</li>
                     <li>Lymphatische Versorgung  von Fuß bis Arm</li>
@@ -51,7 +51,7 @@ permalink: /sanitaetshaus
         <div class="card card-link">
             <div class="card__text">
                 <h4>Bandagen</h4>
-                <ul class="card__list">
+                <ul class="card__list text__list">
                     <li>Basis- und Premiumprodukte</li>
                     <li>nach Maß und Serie</li>
                     <li>von Kopf bis Fuß</li>
@@ -64,7 +64,7 @@ permalink: /sanitaetshaus
             <div class="card__text">
                 <h4>Orthesen</h4>
                 <p>Erfassung und Korrektur von körperlichen Fehlstellungen im Body-Check-Center.</p>
-                <ul class="card__list">
+                <ul class="card__list text__list">
                     <li>Basis- und Premiumprodukte</li>
                     <li>nach Maß und Serie</li>
                     <li>von Kopf bis Fuß</li>
@@ -77,7 +77,7 @@ permalink: /sanitaetshaus
         <div class="card">
             <div class="card__text">
                 <h4>Alltagshilfen</h4>
-                <ul class="card__list">
+                <ul class="card__list text__list">
                     <li>Greifhilfen</li>
                     <li>Anziehhilfen</li>
                     <li>Soft- und Igelbälle</li>
@@ -93,7 +93,7 @@ permalink: /sanitaetshaus
         <div class="card">
             <div class="card__text">
                 <h4>Orthopädische <br>Gehhilfen</h4>
-                <ul class="card__list">
+                <ul class="card__list text__list">
                     <li>von Standard bis elegant</li>
                     <li>Gehstöcke aus Metall, verstellbar</li>
                     <li>Gehstöcke mit anatomischem Handgriff</li>
