--- a/pages/sanitaetshaus.html
+++ b/pages/sanitaetshaus.html
@@ -36,7 +36,7 @@ permalink: /sanitaetshaus
         </p>
     </div>
     <div class="service-cards section__element">
-        <div class="card card-link">
+        <a href="/sanitaetshaus/kompressionsstruempfe" class="card card-link">
             <div class="card__text">
                 <h4>Kompressionsstrümpfe</h4>
                 <ul class="card__list text__list">
@@ -47,8 +47,8 @@ permalink: /sanitaetshaus
                 </ul>
             </div>
             <button class="btn btn--read-more">Mehr erfahren</button>
-        </div>
-        <div class="card card-link">
+        </a>
+        <a href="/sanitaetshaus/bandagen" class="card card-link">
             <div class="card__text">
                 <h4>Bandagen</h4>
                 <ul class="card__list text__list">
@@ -59,7 +59,7 @@ permalink: /sanitaetshaus
                 </ul>
             </div>
             <button class="btn btn--read-more">Mehr erfahren</button>
-        </div>
+        </a>
         <div class="card card-link">
             <div class="card__text">
                 <h4>Orthesen</h4>
